evaluation/test_suite/negative/ub61/1.c
#include <stdio.h>

int main()
{
    const int x = 1;
    int* p = (int*)&x;
    printf("%d\n", *p);
}
